building the orders page, updating theme for the violet, and add dark and light mode

--- a/biome.json
+++ b/biome.json
@@ -33,7 +33,8 @@
         "useExhaustiveDependencies": "off"
       },
       "suspicious": {
-        "useAwait": "warn"
+        "useAwait": "warn",
+        "noArrayIndexKey": "off"
       },
       "style": {
         "useImportType": "off"
