--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.62.0",
     "react-router-dom": "^7.7.1",
+    "recharts": "^3.1.2",
     "sonner": "^2.0.7",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^3.3.1",
