--- a/package.json
+++ b/package.json
@@ -42,11 +42,14 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.1.3",
+    "@testing-library/jest-dom": "^6.7.0",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^24.2.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
     "globals": "^16.3.0",
+    "happy-dom": "^18.0.1",
     "tw-animate-css": "^1.3.6",
     "typescript": "~5.8.3",
     "vite": "^7.0.4",
