--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:test": "vite --port 50789 --mode test",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "fix": "biome format --write ."
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
