prepare application for deploy

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "dev:test": "vite --port 50789 --mode test",
     "build": "tsc -b && vite build",
+    "build:test": "tsc -b && vite build --mode test",
+    "vercel-build": "npm run build:test",
     "preview": "vite preview",
     "test": "vitest",
     "biome:fix": "biome format --write ."
