--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:test": "vite --port 50789 --mode test",
     "build": "tsc -b && vite build",
     "build:test": "tsc -b && vite build --mode test",
-    "vercel-build": "npm run build:test",
+    "vercel-build": "vite build --mode test",
     "preview": "vite preview",
     "test": "vitest",
     "biome:fix": "biome format --write ."
